5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1758_1185.log
== TEST (2019-05-25 13:22:01) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
v2=arrange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(v[i])
		i+=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 13:22:39) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
v2=arrange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(v[i])
		i+=1
print(cont)

-- EXECUTION TIME:
0.367201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1185/main.py", line 4, in <module>
    v2=arrange(size(v))
NameError: name 'arrange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:22:41) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
v2=arrange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(v[i])
		i+=1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:24:41) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
#v2=arange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(i)
		i+=1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 13:25:22) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
#v2=arange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(i)
		i+=1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 13:26:11) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))

i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(i)
	i+=1
print(cont)

-- EXECUTION TIME:
2.19003
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 13:40:05) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
v2=arange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(v[i])
		i+=1
print(cont)

-- EXECUTION TIME:
960.325
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-25 13:42:03) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))
#v2=arange(size(v))
i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(i)
		i+=1
print(cont)

-- EXECUTION TIME:
1019.46
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 07:58:06) 
-- CODE:
from numpy import *

v = array(eval(input("Diigte glicoes: ")))

i = 0
cont = 0

while( i < size(v) ):
	if(v[i]>99):
		cont+=1
		print(i)
	i+=1
print(cont)

-- EXECUTION TIME:
0.50231
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
